--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "node": "^21.2.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "react": "^18.2.0"
   },
   "name": "notepad",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
+    "client": "cd client && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
