--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "json-cyclic": "^1.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.2",
     "node": "^21.2.0",
