--- a/client/package.json
+++ b/client/package.json
@@ -52,5 +52,10 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.23.4"
   },
-  "proxy": "http://localhost:3003"
+  "proxy": "http://localhost:3003",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "keywords": []
 }
