--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "json-cyclic": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
