--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
