開発環境と本番環境の両方で動くようにした

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node backend/app.js",
-    "dev": "nodemon backend/app.js",
+    "start": "nodemon app.js",
     "client": "cd client && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
