--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "audit": "^0.0.6",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
     "lodash": "^4.17.21",
