認証機能firebaseの基礎固め

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase": "^10.11.1",
     "helmet": "^7.1.0",
     "lodash": "^4.17.21",
     "new-date": "^1.0.3",
