--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "firebase-admin": "^12.1.1",
     "helmet": "^7.1.0",
     "json-cyclic": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
