--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.1",
     "helmet": "^7.1.0",
     "lodash": "^4.17.21",
     "new-date": "^1.0.3",
