--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,9 @@
   "scripts": {
     "prestart": "node generateServiceAccount.js",
     "start": "nodemon app.js",
-    "client": "cd client && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "cd ../client && npm start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd ../client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
