--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.18.0",
     "firebase-admin": "^12.1.1",
     "helmet": "^7.1.0",
+    "jest": "^29.7.0",
     "json-cyclic": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
@@ -19,7 +20,8 @@
     "node": "^21.2.0",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "supertest": "^7.0.0"
   },
   "name": "notepad",
   "version": "1.0.0",
@@ -28,7 +30,7 @@
     "prestart": "node generateServiceAccount.js",
     "start": "nodemon app.js",
     "client": "cd ../client && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "cd ../client && npm install && npm run build"
   },
   "author": "",
