テストコードを追加

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,6 @@
     "express-session": "^1.18.0",
     "firebase-admin": "^12.1.1",
     "helmet": "^7.1.0",
-    "jest": "^29.7.0",
     "json-cyclic": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
@@ -20,8 +19,7 @@
     "node": "^21.2.0",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
-    "react-router-dom": "^6.22.2",
-    "supertest": "^7.0.0"
+    "react-router-dom": "^6.22.2"
   },
   "name": "notepad",
   "version": "1.0.0",
@@ -35,5 +33,12 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.7.0",
+    "superagent": "^9.0.2",
+    "supertest": "^7.0.0"
+  }
 }
