--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^0.0.0",
     "jest": "^29.7.0",
