--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
+    "@heroicons/react": "^2.1.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.15.14",
@@ -30,6 +31,7 @@
     "preline": "^2.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
